# mpm_input_preprocessing

./: .gitignore  Dockerfile  Makefile  README.md  deploy-mpm-api.yaml  docker-compose.mpm.yaml  logging.yaml  main.py  pyproject.toml
aws/: credentials
dev/: run.py  script.py  spatial_alignment.py  utils.py
infrastructure/: 10-security-groups.tf  50-ec2-mpm-api.tf  init.sh  mpm.tfvars  mpm_variables.tf  network.tf  roles_policy.tf  terraform.tf  terraform.tfstate  terraform.tfstate.backup
mpm_input_preprocessing/: logging.yaml  settings.py
mpm_input_preprocessing/common/: __init__.py  conversion.py  north_america_EPSG4326.gpkg  preprocess.py  preprocessing.py  spatial_alignment.py  transform.py  utils.py  utils_cdr.py  utils_helper.py  utils_preprocessing.py  utils_transform.py
mpm_input_preprocessing/http/: api.py  middleware.py  router.py
mpm_input_preprocessing/http/routes/: listener.py
mpm_input_preprocessing/server/: api.py  router.py
mpm_input_preprocessing/server/routes/: health.py  listener.py
provisioning/group_vars/: all
provisioning/roles/mpm-api/tasks/: main.yaml
provisioning/roles/mpm-api/templates/: compose.yaml.j2
scripts/: format.sh  lint.sh
