[tool.poetry]
name = "mpm-input-preprocessing"
version = "0.1.0"
description = ""
authors = ["marshHawk4 <kyle@jataware.com>"]
readme = "README.md"
packages = [
         {include = "mpm_input_preprocessing"},
         {include = "mpm_input_preprocessing/**/*.py"}
]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.109.2"
rasterio= {version = "1.3.8", extras = ["s3"]}
httpx = "^0.26.0"
boto3 = "^1.34.52"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
rioxarray="0.15.0"
shapely="2.0.1"
numpy = "< 2"
geopandas = "^1.0.1"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.4.8" }
PyYAML = "^6.0.1"
pydantic-settings = "^2.1.0"
httptools = "^0.6.1"

[tool.poetry.scripts]
dev = "dev.run:main"
format = "dev.script:format"
lint = "dev.script:lint"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-print = "^5.0.0"
autoflake = "^2.2.0"
uvicorn = "^0.23.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
